--- a/nablapps/exchange/templates/exchange/exchange_frontpage.html
+++ b/nablapps/exchange/templates/exchange/exchange_frontpage.html
@@ -17,6 +17,7 @@
         <input type="submit" value="Søk"/>
     </form>
     <p style="color: black;">Her finner du en liste over noen universiteter hvor fysmattere har vært på utveksling. Et universitet er krysset under en spesialiseringskolonne dersom minst en fysmatter med gitt spesialisering har studert der (og har registrert dette). Trykk på et universitet for å få opp en liste med studenter som har studert på et gitt universitet. Noen av dem har utvekslingsrapporter fra studenter som har studert der.</p>
+    <p> Om du har vært på utveksling, og ikke rapportert det, kan du gjøre det via <a href="https://forms.gle/XGVgGskG4infx1Xt8">dette skjemaet.</p>
 
     <script src="/static/js/tabel.js" defer></script>
     <div style="overflow: auto">
